package com.ghcp.starter.user_management.service;

import org.springframework.stereotype.Service;

@Service
public class EmailService {
    public void sendRegistrationConfirmation(String email, String name) {
        // No-op for test/demo
    }
}
